Styling commit. Nav Bar finished. Logout button and welcome text correctly placed as well as profile pictures all being uniformly cropped at 46x46.

--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -6,7 +6,9 @@ $button-on-hover: #669999;
 nav {
   width: 100%;
   height: 10%;
-  min-height: 250px;
+  min-height: 50px;
+} h5 {
+  float: center;
 }
 
 .augment-nav {
@@ -24,6 +26,29 @@ nav {
       background-color: white;
      }
 } 
+
+
+//Logout button styling
+.btn-xs {
+position: absolute; 
+bottom: 0;
+left: 65px;
+  }
+
+#profileImage {
+  position: absolute;
+  z-index: 75;
+  left: 0;
+  top: 0;
+  max-width: 48px;
+  max-height: 48px;
+}
+
+.loginStyling {
+margin-left: 50px;
+}
+
+
 
 
 // ? how make the search button stack at a threshold
